-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.4
-
None
-
RPI3 HW with 5.9.4 Boot2Qt pyro
IMX6 with unknown release
The original (Translated) description by Mikko Konttila/Parker.
They're using Imx6 HW (the Qt version not known)
If the password of the Wi-fi network the device has been successfully connected to is changed, the next connection attempt results in signal NetworkSettingsManager.userAgent.error() being received.
The next attempt to change the password will result in application crash and following information is displayed by the console:
process 1397: arguments to dbus_message_iter_init_append() were incorrect, assertion "message != NULL" failed in file /home/jenkins/workspace/b2qt/build-imx6quad-maincar-10/tmp/work/cortexa9hf-vfp-neon-poky-linux-gnueabi/dbus/1.8.2-r0/dbus-1.8.2/dbus/dbus-message.c line 2425.
This is normally a bug in some application using the D-Bus library.
D-Bus not built with -rdynamic so unable to print a backtrace
This bug could be reproduced with RPI3 HW with default 5.9.4 b2qt image installed.
One could simply
1 Enable mobile Wi-fi hotspot from an Android Phone
2 Use the network settings default demo app to select the new network from the list of available networks, set the passphrase and connect.
3 Change the password setting of the Android handset.
4 Wait until the password request UI comes up on the RPI3 display.
5 Set the new password and press connect
6 Application Crash
I also run my own test application in RPI3 and got the same output from the crash:
Process 573:
arguments to dbus_message_iter_init_append() were incorrect, assertion "message != NULL" failed in file ../../dbus-1.10.10/dbus/dbus-message.c line 2499.
This is normally a bug in some application using the D-Bus library.
D-Bus not built with -rdynamic so unable to print a backtrace
Application crashed: /opt/NetworkManagerTest/bin/NetworkManagerTest
Process stopped
quit
Application finished with exit code 0.
| For Gerrit Dashboard: QTBUG-66280 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 220815,2 | Fix a network settings crash when wi-fi password changes | 5.9 | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |
| 224281,3 | Make network reconnections after passphrase change work better | 5.9 | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |
| 224555,2 | qtdeviceutilities: update revision | morty | yocto/meta-boot2qt | Status: MERGED | +2 | 0 |
| 224677,3 | Forward-port the improvement in passphrase error handling | 5.11 | qt/qtdeviceutilities | Status: MERGED | +2 | 0 |
| 224814,2 | qtdeviceutilities: update module | pyro | yocto/meta-boot2qt | Status: MERGED | +2 | 0 |