Fix a network settings crash when wi-fi password changes

Task-number: QTBUG-66280
Change-Id: I9d9d721a6fdba760d13bb1e3c3693db23192f99e
Reviewed-by: Teemu Holappa <teemu.holappa@qt.io>